Primera actividad HTML y CSS

--- a/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
+++ b/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
@@ -17,19 +17,19 @@
         <tbody>
         <tr>
             <th>Fila 1</th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
+            <th class="asiento" id="1_1"></th>
+            <th class="asiento" id="1_2"></th>
+            <th class="asiento" id="1_3"></th>
+            <th class="asiento" id="1_4"></th>
+            <th class="asiento" id="1_5"></th>
+            <th class="asiento ocupado" id="1_6"></th>
+            <th class="asiento ocupado" id="1_7"></th>
+            <th class="asiento" id="1_8"></th>
+            <th class="asiento" id="1_9"></th>
+            <th class="asiento" id="1_10"></th>
+            <th class="asiento" id="1_11"></th>
+            <th class="asiento" id="1_12"></th>
+            <th class="asiento" id="1_13"></th>
         </tr>
         <tr>
             <th>Fila 2</th>
