--- a/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
+++ b/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
@@ -33,67 +33,67 @@
         </tr>
         <tr>
             <th>Fila 2</th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
+            <th class="asiento ocupado" id="2_1"></th>
+            <th class="asiento ocupado" id="2_2"></th>
+            <th class="asiento" id="2_3"></th>
+            <th class="asiento" id="2_4"></th>
+            <th class="asiento" id="2_5"></th>
+            <th class="asiento" id="2_6"></th>
+            <th class="asiento" id="2_7"></th>
+            <th class="asiento" id="2_8"></th>
+            <th class="asiento" id="2_9"></th>
+            <th class="asiento" id="2_10"></th>
+            <th class="asiento" id="2_11"></th>
+            <th class="asiento" id="2_12"></th>
+            <th class="asiento" id="2_13"></th>
         </tr>
         <tr>
             <th>Fila 3</th>
-            <th class="asiento"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
+            <th class="asiento" id="3_1"></th>
+            <th class="asiento ocupado" id="3_2"></th>
+            <th class="asiento ocupado" id="3_3"></th>
+            <th class="asiento" id="3_4"></th>
+            <th class="asiento" id="3_5"></th>
+            <th class="asiento" id="3_6"></th>
+            <th class="asiento" id="3_7"></th>
+            <th class="asiento" id="3_8"></th>
+            <th class="asiento" id="3_9"></th>
+            <th class="asiento" id="3_10"></th>
+            <th class="asiento" id="3_11"></th>
+            <th class="asiento" id="3_12"></th>
+            <th class="asiento" id="3_13"></th>
         </tr>
         <tr>
             <th>Fila 4</th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
+            <th class="asiento" id="4_1"></th>
+            <th class="asiento" id="4_2"></th>
+            <th class="asiento ocupado" id="4_3"></th>
+            <th class="asiento ocupado" id="4_4"></th>
+            <th class="asiento" id="4_5"></th>
+            <th class="asiento" id="4_6"></th>
+            <th class="asiento" id="4_7"></th>
+            <th class="asiento" id="4_8"></th>
+            <th class="asiento" id="4_9"></th>
+            <th class="asiento" id="4_10"></th>
+            <th class="asiento" id="4_11"></th>
+            <th class="asiento" id="4_12"></th>
+            <th class="asiento" id="4_13"></th>
         </tr>
         <tr>
             <th>Fila 5</th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento ocupado"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
-            <th class="asiento"></th>
+            <th class="asiento" id="5_1"></th>
+            <th class="asiento" id="5_2"></th>
+            <th class="asiento ocupado" id="5_3"></th>
+            <th class="asiento ocupado" id="5_4"></th>
+            <th class="asiento" id="5_5"></th>
+            <th class="asiento" id="5_6"></th>
+            <th class="asiento" id="5_7"></th>
+            <th class="asiento" id="5_8"></th>
+            <th class="asiento" id="5_9"></th>
+            <th class="asiento" id="5_10"></th>
+            <th class="asiento" id="5_11"></th>
+            <th class="asiento" id="5_12"></th>
+            <th class="asiento" id="5_13"></th>
         </tr>
         </tbody>
     </table>
