--- a/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
+++ b/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
@@ -16,7 +16,7 @@
     <table class="tabla">
         <tbody>
         <tr>
-            <th>Fila 1</th>
+            <th id="f1">Fila 1</th>
             <th class="asiento" id="1_1"></th>
             <th class="asiento" id="1_2"></th>
             <th class="asiento" id="1_3"></th>
@@ -32,7 +32,7 @@
             <th class="asiento" id="1_13"></th>
         </tr>
         <tr>
-            <th>Fila 2</th>
+            <th id="f2">Fila 2</th>
             <th class="asiento ocupado" id="2_1"></th>
             <th class="asiento ocupado" id="2_2"></th>
             <th class="asiento" id="2_3"></th>
@@ -48,7 +48,7 @@
             <th class="asiento" id="2_13"></th>
         </tr>
         <tr>
-            <th>Fila 3</th>
+            <th id="f3">Fila 3</th>
             <th class="asiento" id="3_1"></th>
             <th class="asiento ocupado" id="3_2"></th>
             <th class="asiento ocupado" id="3_3"></th>
@@ -64,7 +64,7 @@
             <th class="asiento" id="3_13"></th>
         </tr>
         <tr>
-            <th>Fila 4</th>
+            <th id="f4">Fila 4</th>
             <th class="asiento" id="4_1"></th>
             <th class="asiento" id="4_2"></th>
             <th class="asiento ocupado" id="4_3"></th>
@@ -80,7 +80,7 @@
             <th class="asiento" id="4_13"></th>
         </tr>
         <tr>
-            <th>Fila 5</th>
+            <th id="f5">Fila 5</th>
             <th class="asiento" id="5_1"></th>
             <th class="asiento" id="5_2"></th>
             <th class="asiento ocupado" id="5_3"></th>
