Primera actividad HTML y CSS

--- a/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
+++ b/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
@@ -107,7 +107,7 @@
         </form>       
     </section>
 
-    <footer class="seccion">
+    <footer class="pie">
         <p><strong>Cine UNIR-CINEMA</strong></p>
         <p>Dirección: Calle Avenida de la Paz, 137. Logroño</p>
         <p>Teléfono: 941209743</p>
