Primera actividad HTML y CSS

--- a/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
+++ b/Tema_1/Alberto-Hevia-Lopez/CINEMA/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="seccion">
+    <header class="cabecera">
         <h1>UNIR-CINEMA</h1>
     </header>
 
