Primera actividad HTML y CSS

--- a/Tema_1/Alberto-Hevia-Lopez/CV/index.html
+++ b/Tema_1/Alberto-Hevia-Lopez/CV/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lange="es">
+<html lang="es">
 <head>
     <link rel="Stylesheet" href="styles.css">
     <title>Curriculum Vita</title>
@@ -8,15 +8,15 @@
     <section>
         <table>
             <tr>
-                <th width="350"> 
+                <th width="350" id="nombre"> 
                     <h1>Alberto José Hevia López</h1>
                 </th>
-                <th>
-                    <img src="imagen1.png" width="250" height="100">
+                <th id="imagen" width="200">
+                    <img src="imagen1.png" height="100">
                 </th>
             </tr>
             <tr>
-                <th>Estudiante Desarrollo Web: Full Stack</th>
+                <th id="puesto">Estudiante Desarrollo Web: Full Stack</th>
                 <th></th>
             </tr>
          </table>
