--- a/Tema_1/Alberto-Hevia-Lopez/CV/index.html
+++ b/Tema_1/Alberto-Hevia-Lopez/CV/index.html
@@ -8,15 +8,15 @@
     <section>
         <table>
             <tr>
-                <th width="350" id="nombre"> 
+                <th> 
                     <h1>Alberto José Hevia López</h1>
                 </th>
-                <th id="imagen" width="200">
-                    <img src="imagen1.png" height="100">
+                <th>
+                    <img src="imagen1.png" height="100" alt="Fotografía">
                 </th>
             </tr>
             <tr>
-                <th id="puesto">Estudiante Desarrollo Web: Full Stack</th>
+                <th>Estudiante Desarrollo Web: Full Stack</th>
                 <th></th>
             </tr>
          </table>
